--- a/style.css
+++ b/style.css
@@ -6,6 +6,28 @@
 
 }
 
+.box {
+    margin-top: 20px;
+}
+
+.box p {
+    padding: 20px 0px;
+    border-bottom: 1px solid gray;
+}
+
+.box h3 {
+    font-size: 30px;
+    font-weight: 500;
+    color: #a3a3a3;
+    padding: 5px 0 10px 0px;
+    margin-bottom: -28px;
+}
+
+.box span {
+    font-size: 20px;
+    padding: 11px 0 30px 00px;
+}
+
 .cards p {
     padding: 0px 0 10px 5px;
 }
@@ -151,6 +173,7 @@
 .contactSec {
     margin: auto;
     width: 70%;
+    padding-bottom: 100px;
 }
 
 .SecContent h2 {
@@ -162,10 +185,46 @@
     width: 80%;
     border-radius: 15px;
     padding: 100px;
-    margin: 150px auto;
+    margin: 80px auto 0 auto;
 }
 
 .SecContent2 h1 {
     margin-bottom: 20px;
     font-size: 50px;
+}
+
+.SecContent2 h2 {
+    margin: 0px auto 30px;
+    font-size: 35px;
+    font-weight: 500;
+    text-align: center;
+}
+
+.box h2 {
+    text-align: left;
+    padding: 9px 0 10px 0px;
+    margin-bottom: -10px;
+    font-weight: 300;
+}
+
+.main-box-sum {
+    display: flex;
+    gap: 37px;
+}
+
+.cv-button-div a {
+    text-decoration: none;
+    padding: 19px 47px;
+    background: tomato;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    text-align: center;
+    color: black;
+    font-size: 30px;
+    margin: auto;
+}
+
+.cv-button-div {
+    margin: 70px 38%;
 }
