--- a/style.css
+++ b/style.css
@@ -6,6 +6,62 @@
 
 }
 
+.form-layout input {
+    text-align: left;
+    width: 250px;
+    padding: 15px;
+}
+
+.form-layout label {
+    text-align: left;
+    font-size: 20px;
+    margin: 10px 0;
+}
+
+.form-layout label {}
+
+input[type="submit"] {
+    background: tomato;
+    border-radius: 5px;
+    width: 170px;
+    height: 50px;
+    text-align: center;
+    margin: 27px 21px 0px;
+}
+
+.connectArea {
+    width: 50%;
+}
+
+.form {
+    width: 50%;
+}
+
+form.form-layout label,
+input {
+    display: block;
+    border: navajowhite;
+}
+
+.SecContent3 ul {
+    list-style: none;
+    display: flex;
+    gap: 10px;
+    margin-left: 10%;
+}
+
+.SecContent3 p {
+    font-size: 20px;
+    width: 70%;
+    margin: 20px auto;
+}
+
+.SecContent3 h2 {
+    word-spacing: 5px;
+    letter-spacing: 1.5px;
+    padding: 0 0 25px;
+}
+
 .box {
     margin-top: 20px;
 }
@@ -227,4 +283,15 @@
 
 .cv-button-div {
     margin: 70px 38%;
+}
+
+.SecContent3 {
+    width: 80%;
+    display: flex;
+    text-align: center;
+    border-radius: 15px;
+    padding: 100px;
+    margin: 150px auto;
+    background: #eb71130d;
+    gap: 30px;
 }
