--- a/style.css
+++ b/style.css
@@ -295,3 +295,16 @@ input {
     background: #eb71130d;
     gap: 30px;
 }
+
+#comment {
+    border: none;
+    width: 250px;
+    margin-left: -244px;
+}
+
+footer {
+    text-align: center;
+    color: #908888;
+    margin: -100px 0 0;
+    padding-bottom: 50px;
+}
